# clipboard-share

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
android/: settings.gradle
android/app/: build.gradle
android/app/release/: output-metadata.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/clipboardshare/: BootReceiver.kt  ClipboardListenerService.kt  MainActivity.kt  PayloadDecoder.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
src/: clipboard_monitor.rs  config.rs  connection.rs  container.rs  echo_guard.rs  main.rs  message.rs  payload.rs  sync.rs  sync_engine.rs
src/clipboard/: mock.rs  mod.rs  wayland.rs  windows.rs
src/clipboard/wayland/: changed.rs  mod.rs  read.rs  wait.rs  write.rs
src/clipboard/windows/: changed.rs  mod.rs  read.rs  wait.rs  write.rs
src/connection/: connect.rs  lifecycle.rs  mod.rs  payload.rs  relay.rs
src/transport/: mock.rs  mod.rs  tcp.rs
