[package]
name = "clipboard-share"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png"] }
bytes = "1"
anyhow = "1"

[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
arboard = "3"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
